5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1758_1577.log
== SUBMITION (2019-05-23 11:35:56) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digiten: "))
v = arrange(n)
i=0
while(n<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.594223
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 6, in <module>
    v = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:58) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digiten: "))
v = arrange(n)
i=0
while(n<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:36:15) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digiten: "))
v = arange(n)
i=0
while(n<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.43617
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:36:17) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digiten: "))
v = arange(n)
i=0
while(n<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:39:06) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digiten: "))
v = arange(n)
d = zeros(n)
i=0
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.522153
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0   4   9  15  23  32  42  53  65  79  94 110]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0    81   172   273   384   505   635   775   925  1085  1255  1434
  1623  1822  2031  2250  2478  2716  2964  3222  3490  3767  4054  4351
  4658  4975  5301  5637  5983  6339  6705  7080  7465  7860  8265  8680
  9104  9538  9982 10436 10900 11373 11856]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:39:07) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digiten: "))
v = arange(n)
d = zeros(n)
i=0
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:39:59) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n)
d = zeros(n)
i=0.0
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.388539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 10, in <module>
    v[i]=(a*i**2)/2 + vo*i
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:00) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n)
d = zeros(n)
i=0.0
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:18) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n)
d = zeros(n)
i=0
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:28) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n)
d = zeros(n)
i=0
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:24) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n)
#d = zeros(n)
i=0
print(v)
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:43:01) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n,dtype=float)
#d = zeros(n)
i=0
print(v)
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.362268
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11.]
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15. 16. 17.
 18. 19. 20. 21. 22. 23. 24. 25. 26. 27. 28. 29. 30. 31. 32. 33. 34. 35.
 36. 37. 38. 39. 40. 41. 42.]
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:43:03) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n,dtype=float)
#d = zeros(n)
i=0
print(v)
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:43:12) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n,dtype=float)
#d = zeros(n)
i=0
print(v)
while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.536309
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11.]
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10. 11. 12. 13. 14. 15. 16. 17.
 18. 19. 20. 21. 22. 23. 24. 25. 26. 27. 28. 29. 30. 31. 32. 33. 34. 35.
 36. 37. 38. 39. 40. 41. 42.]
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:43:20) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n,dtype=float)
#d = zeros(n)
i=0

while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.530777
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
Digite a: Digite vo : Digite n: [  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
Digite a: Digite vo : Digite n: [    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:43:26) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n,dtype=float)
#d = zeros(n)
i=0

while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:43:38) 
-- CODE:
from numpy import *

a = float(input("Digite a: "))
vo = float(input("Digite vo : "))
n = int(input("Digite n: "))
v = arange(n,dtype=float)
#d = zeros(n)
i=0

while(i<size(v)):
	v[i]=(a*i**2)/2 + vo*i
	i=i+1
print(v)
-- EXECUTION TIME:
0.354129
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
